--- a/Server/beerrank/pom.xml
+++ b/Server/beerrank/pom.xml
@@ -39,6 +39,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
