--- a/Server/beerrank/src/main/resources/application.properties
+++ b/Server/beerrank/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/backend
+spring.datasource.username=user
+spring.datasource.password=password
