--- a/Server/beerrank/pom.xml
+++ b/Server/beerrank/pom.xml
@@ -59,6 +59,19 @@
         </dependency>
 
 
+        <!-- spring security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
