--- a/Client/package.json
+++ b/Client/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
+    "react-compound-timer": "^1.0.13",
     "react-dom": "^16.8.6",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.0.3",
