--- a/Server/beerrank/pom.xml
+++ b/Server/beerrank/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+        </dependency>
+
 
     </dependencies>
 
